force-app/main/default/objects/Account_Plan__c/fields/Achieved__c.field-meta.xml
<CustomField>
    <fullName>Achieved__c</fullName>
    <label>Achieved (current):</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>