force-app/main/default/objects/Account_Plan__c/fields/Customer_requirements_objectives_focus__c.field-meta.xml
<CustomField>
    <fullName>Customer_requirements_objectives_focus__c</fullName>
    <label>Customer’s Requirement/objective/focus</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>