force-app/main/default/objects/Account_Plan__c/fields/Final_Version__c.field-meta.xml
<CustomField>
    <fullName>Final_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Version</label>
    <type>Checkbox</type>
</CustomField>