force-app/main/default/objects/Account_Plan__c/fields/LeadingBusinessLine__c.field-meta.xml
<CustomField>
    <fullName>LeadingBusinessLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leading Business Line</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <errorMessage>Please select a Business Line</errorMessage>
        <filterItems>
            <field>BusinessLinesDivisions__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Division</value>
        </filterItems>
        <filterItems>
            <field>BusinessLinesDivisions__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Relation</value>
        </filterItems>
        <filterItems>
            <field>BusinessLinesDivisions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BusinessLinesDivisions__c</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>