force-app/main/default/objects/Account_Plan__c/fields/SWOT_Analysis__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Analysis__c</fullName>
    <label>SWOT Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>