force-app/main/default/objects/Account_Plan__c/fields/Total_Customer_Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Opportunity_Value__c</fullName>
    <label>Total Customer Opportunity Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>