force-app/main/default/objects/Account_Plan__c/fields/Valid_until_date__c.field-meta.xml
<CustomField>
    <fullName>Valid_until_date__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()), 12, 31)</defaultValue>
    <label>Valid until date</label>
    <type>Date</type>
</CustomField>