force-app/main/default/objects/Account_Plan__c/fields/Vision__c.field-meta.xml
<CustomField>
    <fullName>Vision__c</fullName>
    <label>Vision (what):</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>