force-app/main/default/objects/Account_Plan__c/fields/What_not_worked_well__c.field-meta.xml
<CustomField>
    <fullName>What_not_worked_well__c</fullName>
    <label>What hasn’t worked well</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>