force-app/main/default/objects/Account_Plan__c/fields/Worked_well__c.field-meta.xml
<CustomField>
    <fullName>Worked_well__c</fullName>
    <label>What has worked well</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>