force-app/main/default/objects/Account_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Version__c</columns>
    <columns>Status__c</columns>
    <columns>Valid_until_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>